[by make all page]3-8

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,11 +9,14 @@
 
   <tr>
     <% @books.each do |book| %>
-    <%# <!-- <td><%= book.user.name %></td> --> %>
-    <%# <!-- <td><%= link_to book.book_name, book_path(@book.id), class: "book_path_#{@book.id}" %></td> --> %>
+    <td><%= book.user.name %></td>
+    <td><%= link_to book.book_name, book_path(book.id), class: "book_path_#{book.id}" %></td>
     <td><%= book.book_name %></td>
     <td><%= book.caption %></td>
   </tr>
     <% end %>
 
 </table>
+
+<!-- 部分テンプレート (マイページ、送信フォーム) -->
+<%= render'users/list',user:@user,book:@book %>
