--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,6 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -17,10 +16,10 @@
       <ul class="nav navbar-nav navbar-right" date-hover="dropdown" date-animation="zoomIn fadeIn fadeInUp fadeIn">
         <% if user_signed_in? %>
          <li class="">
-          <%= link_to "Home", root_path, class:"home" %>
+          <%= link_to "Home", user_path(current_user.id), class:"user_#{current_user.id}" %>
          </li>
          <li class="">
-          <%# <%= link_to "Users", empty_path %> %>
+          <%= link_to "Users", users_path, class:"users" %>
          </li>
          <li class="">
           <%= link_to "Books", books_path, class:"books" %>
@@ -36,7 +35,7 @@
           <%= link_to "About", books_about_path, class:"about" %>
          </li>
          <li class="">
-          <%= link_to "Sign up", new_user_registration_path %>
+          <%= link_to "Sign up", new_user_registration_path, class:"sign_up" %>
          </li>
          <li class="">
           <%= link_to "login", new_user_session_path, class:"sign_in" %>
