--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,40 @@
+<%= flash[:success] %>
 
 <%= @book.user.name %>
-<h2>title</h2>
 <p><%= @book.book_name %></p>
-<h2>body</h2>
 <p><%= @book.caption %></p>
 
-<%= link_to "edit" , edit_book_path(@book.id) , class:"edit_#{@book.id}" %>
-<%= link_to "destroy", book_path(@book.id), method: delete, class:"destroy_book#{@book.id}" %>
+<% if @user == current_user %>
+<%= link_to "edit", edit_book_path(@book.id) , class:"edit_#{@book.id}" %>
+<%= link_to "destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"destroy_book#{@book.id}" %>
+<% end %>
+
+<!-- マイページ用 -->
+<h2>User Info</h2>
+<h4><%= attachment_image_tag @user, :user_image, :fill, 80, 80, format: 'jpeg' %></h4>
+<h4>name:<%= @user.name %></h4>
+<h4>introduction:<%= @user.introduction %></h4>
+
+ <%= link_to "edit", user_path(current_user.id), class:"user_#{current_user.id}" %>
+
+<!-- 本送信用 -->
+<h2>New Book</h2>
+<%= form_for(@bookn) do |f| %>
+<h4>title</h4>
+<%= f.text_field :book_name , class:"book_title" %>
+<h4>option</h4>
+<%= f.text_area :caption , class:"book_body"%>
+
+ <br><%= f.submit "create book" %></br>
+
+<% if @bookn.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @bookn.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<% end %>
