--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
  <%= f.attachment_field :user_image , class: "user_image" %>
 
 <h4>introduction</h4>
- <%= f.text_field :introduction , class:"user_introduction" %>
+ <%= f.text_field :introduction , class:"introduction" %>
 
  <% if @user.errors.any? %>
    <div id="error_explanation" class="alert alert-danger">
