--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,11 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.navbar-nav{
+  position: absolute; right: 30px
+}
+
+.title{
+  position:absolute; left:30px
+}
