--- a/app/views/books/about.html.erb
+++ b/app/views/books/about.html.erb
@@ -1,2 +1,2 @@
-    <h1>ようこそ！Bookersへ</h1>
-    <p>みんなで本を投稿して楽しめます。作成者は居附です。</p>
+<h1>ようこそ！<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookersへ</h1>
+<p>みんなで本を投稿して楽しめます。作成者は居附です。</p>
