--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,6 @@
 
-<h1>Book detail</h1>
+<h1>Editing Book</h1>
+
 
 <%= form_for(@book) do |f| %>
 
@@ -7,7 +8,7 @@
  <%= f.text_field :book_name , class:"book_title" %>
 <h4>opinion</h4>
  <%= f.text_area :caption , class:"book_body" %>
-<br><%= f.submit 'update book' %></br>
+<br><%= f.submit 'update book', class: "btn btn-primary" %></br>
 <% end %>
 
 <%= link_to "show" , book_path(@book.id), class:"show_#{@book.id}" %>
