--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,21 +1,33 @@
+
+
+
 <!-- マイページ用 -->
-<h2>User Info</h2>
-<h4><%= attachment_image_tag user, :user_image, :fill, 80, 80, format: 'jpeg' %></h4>
-<h4>name:<%= user.name %></h4>
-<h4>introduction:<%= user.introduction %></h4>
-
- <%= link_to "edit", edit_user_path(user.id), class:"edit_user_#{user.id}" %>
-
+<h1>User Info</h1>
+<table class="table">
+ <%= attachment_image_tag user, :user_image, :fill, 80, 80, format: 'jpeg', fallback: "no_image.jpg", :size => "80x80"  %>
+ <tr>
+  <th>name:<%= user.name %></th>
+ </tr>
+ <tr>
+  <th>introduction:<%= user.introduction %></th>
+ </tr>
+ <tr>
+  <th aria-hidden="true">
+    <%= link_to "", edit_user_path(user.id), class:"edit_user_#{user.id} glyphicon glyphicon-wrench btn btn-default" %>
+  </th>
+ </tr>
+</table>
 
 <!-- 本送信用 -->
-<h2>New Book</h2>
+
+<h1>New Book</h1>
 <%= form_for(book) do |f| %>
 <h4>title</h4>
 <%= f.text_field :book_name , class:"book_title" %>
 <h4>option</h4>
 <%= f.text_area :caption , class:"book_body"%>
 
- <br><%= f.submit "create book" %></br>
+ <br><%= f.submit "create book", class: "btn btn-primary" %></br>
 
 <% if book.errors.any? %>
   <div id="error_explanation" class="alert alert-danger">
@@ -26,5 +38,4 @@
     </ul>
   </div>
 <% end %>
-
 <% end %>
