--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,35 @@
+
+<div class="container">
+<div class="row">
+
+<!-- 部分テンプレート (マイページ、送信フォーム) -->
+<div class="col-lg-3">
+<%= render'users/list',user:@user,book:@book %>
+</div>
+<!-- 部分テンプレートここまで -->
+
+<div class="col-lg-9">
+<table class="table">
+
 <h1>Users</h1>
 
-<table>
+<table class="table">
 
   <tr>
     <th>image</th>
     <th>name</th>
+    <th></th>
   </tr>
 
   <tr>
     <% @users.each do |user| %>
-    <td><%= attachment_image_tag user, :user_image, :fill, 30, 30, format: 'jpeg' %></td>
+    <td><%= attachment_image_tag user, :user_image, :fill, 30, 30, format: 'jpeg',fallback: "no_image.jpg", :size => "30x30" %></td>
     <td><%= user.name %></td>
     <td><%= link_to "show", user_path(user.id), class: "user_path_#{user.id}" %><td>
   </tr>
     <% end %>
 </table>
 
-<!-- 部分テンプレート (マイページ、送信フォーム) -->
-<%= render'users/list',user:@user,book:@book %>
+</div>
+</div>
+</div>
