--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,12 +23,15 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "password_field" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "password_confirm" %>
   </div>
 
   <div class="actions">
     <%= f.submit "Sign up", class: "btn btn-success" %>
   </div>
+
+
+
 <% end %>
 
 <%= render "devise/shared/links" %>
