--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav" >
         <% if user_signed_in? %>
          <li aria-hidden="true">
-          <%= link_to "Home", user_path(current_user.id), class:"user_#{current_user.id} glyphicon glyphicon-home" %>
+          <%= link_to "Home", user_path(current_user.id), class:"home glyphicon glyphicon-home" %>
          </li>
          <li aria-hidden="true">
           <%= link_to "Users", users_path, class:"users glyphicon glyphicon-user" %>
