--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
     <% @users.each do |user| %>
     <td><%= attachment_image_tag user, :user_image, :fill, 30, 30, format: 'jpeg',fallback: "no_image.jpg", :size => "30x30" %></td>
     <td><%= user.name %></td>
-    <td><%= link_to "show", user_path(user.id), class: "user_path_#{user.id}" %><td>
+    <td><%= link_to "show", user_path(user.id), class: "user_#{user.id}" %><td>
   </tr>
     <% end %>
 </table>
